--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div id="DIV_2">
 				<div id="DIV_3">
 					<h1 id="H1_4">
-						Nepal Physicsl Society School of Computing 
+						Nepal Physical Society School of Computing 
 					</h1>
 					<h4 id="H4_5">
 						From basic programming to advanced numerical methods, optimization, simulation, machine learning, and quantum computing
