--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								the Computational revolution!
 								<br>
 
-								<a class="primary-btn" href="index.html">Get Started Now</a>
+								<a class="primary-btn" href="https://nps.org.np/">Get Started Now</a>
 							</p>
 
 							<a class="btn btn-social-icon btn-facebook" style="color:darkblue" href="https://www.facebook.com/nps.org.np/" target ="_blank" >
