--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<title>npshub</title>
 		
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
+		
 			<!--
 			CSS
 			============================================= -->
@@ -80,14 +81,13 @@
 
 						</div>
 						<div class="col-lg-6 home-about-right no-padding">
-							<h3> Get Globally Connected <br>
-							with Our NPS Network</h3>
+							<h3> Nepal Physical Society <br> School of Computing</h3>
 							<h5>
-								Educational transformation requires engagement of multidesciplinary people.
+								Educational transformation in modern days requires engagement of multidesciplinary people.
 							</h5>
 							<p>
 								We are pushing the boundary of AI everyday. Our participants from the every corner of the world 
-								are joining to our mission of compitational transformation and data awareness. AI has matured into subdesciplines that have yielded a constellation
+								are joining to our mission of compitational transformation and data awareness in Physics Education. AI has matured into subdesciplines that have yielded a constellation
 								of methods ranging from smart governance, healthcare, budget management, education etc. Our attempt will be 
 								connecting people in Physics from every sector to a the common ground of Nepal Physical Society. We hope the valuable assessment, and 
 								guidance can be developed through focused studies, monitoring and analysis in our projects. Let's unite to bring
@@ -134,7 +134,7 @@
 								<span> Your participation will elevate our global understanding</span>
 							</p>
 							<p>
-								We are working in the seperate focused group to design various projects in classrom Physics to innovative Physics topics e.g., Quantum Computing, Computational Neuro physics, Computational Genomics. 
+								We are working in the seperate focused group to design various projects in classrom Physics (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning). 
 							</p>
 							<a class="primary-btn" href="https://www.github.com/npshub">Get Started Now</a>
 						</div>
@@ -168,7 +168,7 @@
 						<div class="col-md-12 pb-40 header-text text-center">
 							<h1 class="pb-10">Get Involved in Our Online Training</h1>
 							<p>
-								Our self pased training syllabus will guide you to your destination.
+								Our training syllabus will guide you to your destination.
 							</p>
 						</div>
 					</div>							
@@ -257,7 +257,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/migration.html" target ="_blank" class="title d-flex flex-row">
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-database"></span>
 									<h4> Numerical Methods </h4>
 								</a>
@@ -268,8 +268,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/corruption.html" target ="_blank" class="title d-flex flex-row">
-									<span class="lnr lnr-pushpin"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-earth"></span>
 									<h4> Electrodynamics </h4>
 								</a>
 								<p>
@@ -281,8 +281,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/governance.html" target ="_blank" class="title d-flex flex-row">
-									<span class="lnr lnr-apartment"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-diamond"></span>
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
 								<p>
@@ -298,7 +298,7 @@
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/contract.html" target ="_blank" class="title d-flex flex-row">
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Quantum Mechanics</h4>
 								</a>
@@ -309,8 +309,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/budget.html" target ="_blank" class="title d-flex flex-row">
-									<span class="lnr lnr-flag"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-diamond"></span>
 									<h4> Classical Mechanics </h4>
 								</a>
 								<p>
@@ -320,8 +320,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="#" class="title d-flex flex-row">
-									<span class="lnr lnr-earth"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-diamond"></span>
 									<h4>Nuclear Physics</h4>
 								</a>
 								<p>
@@ -335,7 +335,7 @@
 
 												<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/contract.html" target ="_blank" class="title d-flex flex-row">
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Condensed Matter Physics</h4>
 								</a>
@@ -346,8 +346,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="./current/project/budget.html" target ="_blank" class="title d-flex flex-row">
-									<span class="lnr lnr-flag"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-earth"></span>
 									<h4> Econophysics </h4>
 								</a>
 								<p>
@@ -357,8 +357,8 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="#" class="title d-flex flex-row">
-									<span class="lnr lnr-earth"></span>
+								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+									<span class="lnr lnr-database"></span>
 									<h4> Quantum Computing</h4>
 								</a>
 								<p>
