--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<p>
 										Getting Started with Latex, Jupyter Notebook, Github etc for classroom projects.
 									</p>
-									<a href="./current/syllabus/intro.html" class="primary-btn text-uppercase">View Details</a>
+									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -197,7 +197,7 @@
 									<p>
 										Introductory courses in Python programming and  data visualization for classroom.
 									</p>
-									<a href= "./current/syllabus/inter.html" class="primary-btn text-uppercase">View Details</a>
+									<a href= "https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -211,7 +211,7 @@
 									<p>
 										Projects from syllabus (Textbook oriented). 
 									</p>
-									<a href="./current/syllabus/adv.html" class="primary-btn text-uppercase">View Details</a>
+									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -225,7 +225,7 @@
 									<p>
 									 Projects from innovative topics (Tech oriented).
 									</p>
-									<a href="./current/syllabus/project.html" class="primary-btn text-uppercase">View Details</a>
+									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>																								
