--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 									<p>
 										Getting Started with Latex, Jupyter Notebook, Github etc for classroom projects.
 									</p>
-									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/documentation/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -257,7 +257,7 @@
 					<div class="row">
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/numerical-methods/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-database"></span>
 									<h4> Numerical Methods </h4>
 								</a>
