error analysis updated
placeholder removed

--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -62,7 +62,7 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Error Analysis </h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                    We wil discuss about error calculation in scientific experiment and computation.
                                 </p>
        
                             </div>
