--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -63,6 +63,7 @@
                                 <h3 class="title"> Error Analysis </h3>
                                 <p class="description">
                                     We wil discuss about error calculation in scientific experiment and computation.
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit egestas egestas fringilla phasellus.
                                 </p>
        
                             </div>
