--- a/project/numerical-methods/index.html
+++ b/project/numerical-methods/index.html
@@ -63,7 +63,7 @@
                                 <h3 class="title"> Error Analysis </h3>
                                 <p class="description">
                                     We wil discuss about error calculation in scientific experiment and computation.
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit egestas egestas fringilla phasellus.
+                                    An error may be defined as the difference between the measured value and the actual value. For example, if the two operators use the same device or instrument for a measurement, it is not necessary that they may get the similar results. The difference that occurs between both the measurements is referred to as an ERROR.
                                 </p>
        
                             </div>
