--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -62,7 +62,10 @@
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Latex </h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+LaTeX is a high quality typesetting system which can produce
+modern technical and scientific documents such as Article,
+Report, Thesis,Term Paper, Project work, Book, and Beamer
+Presentation.
                                 </p>
        
                             </div>
