--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -63,9 +63,9 @@
                                 <h3 class="title"> Introduction to Latex </h3>
                                 <p class="description">
 LaTeX is a high quality typesetting system which can produce
-modern technical and scientific documents such as Article,
-Report, Thesis,Term Paper, Project work, Book, and Beamer
-Presentation.
+modern technical and scientific documents such as article, proposal,
+report, thesis,term Paper, project work, book, and beamer
+presentation.
                                 </p>
        
                             </div>
