--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -64,7 +64,7 @@
                                 <p class="description">
 LaTeX is a high quality typesetting system which can produce
 modern technical and scientific documents such as article, proposal,
-report, thesis,term Paper, project work, book, and beamer
+report, thesis,term paper, project work, book, and beamer
 presentation.
                                 </p>
        
