--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 									<p>
 										Introductory courses in Python programming and  data visualization for classroom.
 									</p>
-									<a href= "https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href= "./training/python/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -211,7 +211,7 @@
 									<p>
 										Projects from syllabus (Textbook oriented). 
 									</p>
-									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/classroom/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>	
@@ -225,7 +225,7 @@
 									<p>
 									 Projects from innovative topics (Tech oriented).
 									</p>
-									<a href="https://github.com/npshub" target ="_blank" class="primary-btn text-uppercase">View Details</a>
+									<a href="./training/advanced/index.html" target ="_blank" class="primary-btn text-uppercase">View Details</a>
 								</div>
 							</div>
 						</div>																								
@@ -268,7 +268,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/electrodynamics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-earth"></span>
 									<h4> Electrodynamics </h4>
 								</a>
@@ -281,7 +281,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/statistical-and-thermal-physics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Statistical and Thermal Physics </h4>
 								</a>
@@ -298,7 +298,7 @@
 
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/quantum-mechanics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Quantum Mechanics</h4>
 								</a>
@@ -309,7 +309,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/classical-mechanics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Classical Mechanics </h4>
 								</a>
@@ -320,7 +320,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/nuclear-physics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4>Nuclear Physics</h4>
 								</a>
@@ -335,7 +335,7 @@
 
 												<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/condensed-matter-physics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-diamond"></span>
 									<h4> Condensed Matter Physics</h4>
 								</a>
@@ -346,7 +346,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/econophysics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-earth"></span>
 									<h4> Econophysics </h4>
 								</a>
@@ -357,7 +357,7 @@
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-feature">
-								<a href="https://github.com/npshub" target ="_blank" class="title d-flex flex-row">
+								<a href="./project/quantum-mechanics/index.html" target ="_blank" class="title d-flex flex-row">
 									<span class="lnr lnr-database"></span>
 									<h4> Quantum Computing</h4>
 								</a>
