--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 								Educational transformation in modern days requires engagement of multidesciplinary people.
 							</h5>
 							<p>
-								We are pushing the boundary of AI everyday. Our participants from the every corner of the world 
-								are joining to our mission of compitational transformation and data awareness in Physics Education. AI has matured into subdesciplines that have yielded a constellation
-								of methods ranging from smart governance, healthcare, budget management, education etc. Our attempt will be 
-								connecting people in Physics from every sector to a the common ground of Nepal Physical Society. We hope the valuable assessment, and 
-								guidance can be developed through focused studies, monitoring and analysis in our projects. Let's unite to bring
+								We are pushing the boundary of Computation and AI everyday. Our participants from the every corner of the world 
+								are joining to our mission of compitational transformation and data awareness in Physics Education. Computation has matured into subdesciplines that have yielded a constellation
+								of methods ranging from AI, smart governance, healthcare, Security, education etc. Our attempt will be 
+								connecting people in Physics from every corner of the world to a the common ground of Nepal Physical Society. We hope the valuable assessment, and 
+								guidance can be developed through focused studies, monitoring and analysis in our projects and implement them in the Physics Education. Let's unite to bring
 								the Computational revolution!
 								<br>
 
@@ -134,7 +134,7 @@
 								<span> Your participation will elevate our global understanding</span>
 							</p>
 							<p>
-								We are working in the seperate focused group to design various projects in classrom Physics (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning). 
+								We are working in the seperate focused group to design various projects in the Classrom Physics (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning and AI). 
 							</p>
 							<a class="primary-btn" href="https://www.github.com/npshub">Get Started Now</a>
 						</div>
@@ -390,10 +390,10 @@
 							<div class="single-footer-widget">
 								<h6>Top Products</h6>
 								<ul class="footer-nav">
-									<li><a href="#">Managed Website</a></li>
-									<li><a href="#">Manage Reputation</a></li>
-									<li><a href="#">Power Tools</a></li>
-									<li><a href="#">Marketing Service</a></li>
+									<li><a href="#">Become a NPS Member</a></li>
+									<li><a href="#">Join NPS Training</a></li>
+									<li><a href="#">Past Schools</a></li>
+									<li><a href="#"></a>Contact us</li>
 								</ul>
 							</div>
 						</div>
