--- a/training/classroom/index.html
+++ b/training/classroom/index.html
@@ -8,8 +8,12 @@
 
         <link href="css/timeline.css" rel="stylesheet">
         <link href="css/syllabus.css" rel="stylesheet">
+
+
        
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -58,7 +62,7 @@
 
 
                         <a href = "" target="_blank" class="timeline">
-                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-content">
                                 <h3 class="title"> Problem Identification </h3>
                                 <p class="description">
@@ -71,7 +75,7 @@
 
 
                         <a href= "" target="_blank" class="timeline">
-                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-content">
                                 <h3 class="title"> Setting up Numerical Methods </h3>
                                 <p class="description">
@@ -83,7 +87,7 @@
 
 
                         <a href=  "" target ="_blank" class="timeline">
-                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-content">
                                 <h3 class="title"> Setting up Simulation Methods </h3>
                                 <p class="description">
@@ -96,7 +100,7 @@
 
 
                          <a href = "" target="_blank" class="timeline">
-                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-content">
                                 <h3 class="title"> Setting up Plot and Visualization </h3>
                                 <p class="description">
@@ -108,7 +112,7 @@
 
 
                          <a href= "" target ="_blank" class="timeline">
-                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                             <div class="timeline-content">
                                 <h3 class="title"> Result and Analysis </h3>
                                 <p class="description">
