--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -90,7 +90,15 @@ presentation.
                             <div class="timeline-content">
                                 <h3 class="title">Introduction to Beamer and PPT</h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                    Beamer is a LATEX class for creating presentations that are held using a projector, but it can also be
+used to create transparency slides. Preparing presentations with beamer is different from preparing them
+with wysiwyg programs like OpenOffice’s Impress, Apple’s Keynotes, or KOffice’s KPresenter. A beamer
+presentation is created like any other LATEX document: It has a preamble and a body, the body contains
+\sections and \subsections, the different slides (called frames in beamer) are put in environments, they
+are structured using itemize and enumerate environments, and so on. The obvious disadvantage of this
+approach is that you have to know LATEX in order to use beamer. The advantage is that if you know LATEX,
+you can use your knowledge of LATEX also when creating a presentation, not only when writing papers.
+
                                 </p>
                             </div>
                         </a>
