--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -78,7 +78,8 @@ presentation.
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Jupyter Notebook </h3>
                                 <p class="description">
-                                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                   The Jupyter Notebook is an open source web application that you can use to create and share documents that contain live code, equations, visualizations, and text. Jupyter Notebook is maintained by the people at Project Jupyter.
+                                   References: https://realpython.com/jupyter-notebook-introduction/
                                 </p>
                             </div>
                         </a>
