--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -65,7 +65,7 @@
 LaTeX is a high quality typesetting system which can produce
 modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
-presentation.
+presentation. In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert equation in your LaTeX documents.
                                 </p>
        
                             </div>
