--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -79,8 +79,7 @@ presentation. In this topic we will discuss about how to make chapter, section, 
                                 <h3 class="title"> Introduction to Jupyter Notebook </h3>
                                 <p class="description">
                                    The Jupyter Notebook is an open source web application that you can use to create and share documents that contain live code, equations, visualizations, and text. Jupyter Notebook is maintained by the people at Project Jupyter.
-                                    <p class="description">
-                                   References: https://realpython.com/jupyter-notebook-introduction/
+                                    <br> References: https://realpython.com/jupyter-notebook-introduction/
                                    
                                 </p>
                             </div>
