--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -92,11 +92,11 @@ presentation. In this topic we will discuss about how to make chapter, section, 
                             <div class="timeline-content">
                                 <h3 class="title">Introduction to Beamer and PPT</h3>
                                 <p class="description">
-                                    Beamer is a LATEX class for creating presentations that are held using a projector, but it can also be
+                                    Beamer is a LaTeX class for creating presentations that are held using a projector, but it can also be
 used to create transparency slides. Preparing presentations with beamer is different from preparing them
 with What you see is
 what you get (WYSIWYG) programs like OpenOffice’s Impress, Apple’s Keynotes, or KOffice’s KPresenter. A beamer
-presentation is created like any other LATEX document: It has a preamble and a body, the body contains
+presentation is created like any other LaTeX document: It has a preamble and a body, the body contains
 \sections and \subsections, the different slides (called frames in beamer) are put in environments, they
 are structured using itemize and enumerate environments, and so on. The obvious disadvantage of this
 approach is that you have to know LaTeX in order to use beamer. The advantage is that if you know LaTeX,
