--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -65,7 +65,10 @@
 LaTeX is a high quality typesetting system which can produce
 modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
-presentation. In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.
+presentation. 
+<body>
+  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.</p>
+</body>
                                 </p>
        
                             </div>
