--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -66,9 +66,8 @@ LaTeX is a high quality typesetting system which can produce
 modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
 presentation. 
-<body>
-  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.</p>
-</body>
+<br>  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.</p>
+
                                 </p>
        
                             </div>
