--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -82,7 +82,7 @@ presentation.
                                 <p class="description">
                                    The Jupyter Notebook is an open source web application that you can use to create and share documents that contain live code, equations, visualizations, and text. Jupyter Notebook is maintained by the people at Project Jupyter.
                                     <br> <p style="color:blue;">References: https://jupyter.org/documentation</p> 
-                                     <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a> 
+                                    <p  <a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a> </p> 
                                    
                                 </p>
                             </div>
