--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -96,7 +96,7 @@ presentation.
                                     Beamer is a LaTeX class for creating presentations that are held using a projector, but it can also be
 used to create transparency slides. Preparing presentations with beamer is different from preparing them
 with What you see is
-what you get <br> <p style="color:blue;">(WYSIWYG)</p> programs like OpenOffice’s Impress, Apple’s Keynotes, or KOffice’s KPresenter. A beamer
+what you get  <p style="color:blue;">(WYSIWYG)</p> programs like OpenOffice’s Impress, Apple’s Keynotes, or KOffice’s KPresenter. A beamer
 presentation is created like any other LaTeX document: It has a preamble and a body, the body contains
 \sections and \subsections, the different slides (called frames in beamer) are put in environments, they
 are structured using itemize and enumerate environments, and so on. The obvious disadvantage of this
