--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -67,6 +67,7 @@ modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
 presentation. 
 <br>  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.</p>
+Click <a href="https://latex.org/forum/">here</a> to go to LaTex dcumentaton.
 
                                 </p>
        
