--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -66,10 +66,9 @@ LaTeX is a high quality typesetting system which can produce
 modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
 presentation. 
-<br>  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents.</p>
-Click <a href="https://latex.org/forum/">here</a> to go to LaTex dcumentaton.
-
-                                </p>
+<br>  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents. 
+</p> </p>
+Click<a href="https://latex.org/forum/">here</a> to go to LaTex dcumentaton.
        
                             </div>
                         </a>
