--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -114,7 +114,7 @@ you can use your knowledge of LaTeX also when creating a presentation, not only 
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Academic Writing </h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus..                                
+                                    Academic writing is used while preparing the materials for students in class room. The major parts of academic writing are discuss various sections on academic writing. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus..                                
                                 </p>
                             </div>
                         </a>
