--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 						<div class="col-lg-6 home-about-right no-padding">
 							<h3> Nepal Physical Society <br> School of Computing</h3>
 							<h5>
-								Educational transformation in modern days requires engagement of multidesciplinary people.
+								Educational transformation in modern days requires engagement of multidisciplinary people.
 							</h5>
 							<p>
-								We are pushing the boundary of Computation and AI everyday. Our participants from the every corner of the world 
-								are joining to our mission of compitational transformation and data awareness in Physics Education. Computation has matured into subdesciplines that have yielded a constellation
-								of methods ranging from AI, smart governance, healthcare, Security, education etc. Our attempt will be 
-								connecting people in Physics from every corner of the world to a the common ground of Nepal Physical Society. We hope the valuable assessment, and 
+								We are pushing the boundary of Computation and Artificial Intelligence (AI) everyday. Our participants from the every corner of the world 
+								are joining to our mission of computationa transformation and data awareness in Physics Education. Computation has matured into  subdisciplines that have yielded a constellation
+								of methods ranging from AI, smart governance, healthcare, security, education etc. Our attempt will be 
+								connecting people in Physics from every corner of the world to  the common ground of Nepal Physical Society. We hope the valuable assessment, and 
 								guidance can be developed through focused studies, monitoring and analysis in our projects and implement them in the Physics Education. Let's unite to bring
 								the Computational revolution!
 								<br>
@@ -134,7 +134,7 @@
 								<span> Your participation will elevate our global understanding</span>
 							</p>
 							<p>
-								We are working in the seperate focused group to design various projects in the Classrom Physics (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning and AI). 
+								We are working in the separate focused group to design various projects in the Physics Classroom  (e.g.,  Numerical Methods, Classical Mechanics, Statistical Physics, Quantum Physics, Electrodynamics and Condensed Matter Physics) to innovative Physics topics (e.g., Quantum Computing, Computational Neuro physics, Computational Genomics, Econophysics, Machine Learning and AI). 
 							</p>
 							<a class="primary-btn" href="https://www.github.com/npshub">Get Started Now</a>
 						</div>
