--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</h5>
 							<p>
 								We are pushing the boundary of Computation and Artificial Intelligence (AI) everyday. Our participants from the every corner of the world 
-								are joining to our mission of computationa transformation and data awareness in Physics Education. Computation has matured into  subdisciplines that have yielded a constellation
+								are joining to our mission of computational transformation and data awareness in Physics Education. Computation has matured into  subdisciplines that have yielded a constellation
 								of methods ranging from AI, smart governance, healthcare, security, education etc. Our attempt will be 
 								connecting people in Physics from every corner of the world to  the common ground of Nepal Physical Society. We hope the valuable assessment, and 
 								guidance can be developed through focused studies, monitoring and analysis in our projects and implement them in the Physics Education. Let's unite to bring
