--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -114,7 +114,8 @@ you can use your knowledge of LaTeX also when creating a presentation, not only 
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Academic Writing </h3>
                                 <p class="description">
-                                    Academic writing is used while preparing the materials for students in class room. The major parts of academic writing are discuss various sections on academic writing. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus..                                
+                                    
+Academic writing is used while preparing the materials for students in class room. In this topic we will discuss about knowledge, skills and strategies to help you produce writing which is accurate, well-formed, well-expressed, clear and coherent. In this section topics reflect on the nature of analysis, argument and critical thinking, all of which give depth to academic writing. In addition, you will learn how to refer to sources effectively, and to employ a range of conventions associated with academic scientific writing. We will discuss about the writing process, study the mechanics of writing, i.e. formating, grammar and punctuation, and explore the characteristics of academic scientific discourse.                              
                                 </p>
                             </div>
                         </a>
