--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -115,7 +115,8 @@ you can use your knowledge of LaTeX also when creating a presentation, not only 
                                 <h3 class="title"> Introduction to Academic Writing </h3>
                                 <p class="description">
                                     
-Academic writing is used while preparing the materials for students in class room. In this topic we will discuss about knowledge, skills and strategies to help you produce writing which is accurate, well-formed, well-expressed, clear and coherent. This sections reflect on the nature of analysis, argument and critical thinking, all of which give depth to academic writing. In addition, you will learn how to refer to sources effectively, and to employ a range of conventions associated with academic scientific writing. We will discuss about the writing process, study the mechanics of writing, i.e. formating, grammar and punctuation, and explore the characteristics of academic scientific discourse.                              
+Academic writing is very useful while preparing any types of  books, and materials for students in the classroom. In this topic we will discuss knowledge, skills and strategies to help you produce writing which is accurate, well-formed, well-expressed, clear and coherent. Academic writing section reflects on the nature of analysis, argument and critical thinking, all of which give depth to academic writing. In addition, you will learn how to refer to sources effectively, and to employ a range of conventions associated with academic scientific writing. We will discuss the writing process, study the mechanics of writing, i.e. formating, grammar and punctuation, and explore the characteristics of academic scientific discourse.
+                              
                                 </p>
                             </div>
                         </a>
