--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -129,7 +129,7 @@ Academic writing is very useful while preparing any types of  books, and materia
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Scientific Writting </h3>
                                 <p class="description">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat commodo sed egestas egestas fringilla phasellus.
+                                    Scientific writing ....
                                 </p>
                             </div>
                         </a>
