--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -129,7 +129,10 @@ Academic writing is very useful while preparing any types of  books, and materia
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to Scientific Writting </h3>
                                 <p class="description">
-                                    Scientific writing ....
+The core of scientific computing is designing, writing, testing, debugging and modifying numerical software for application to a vast range of areas: from graphics,
+weather forecasting, and chemistry to engineering, biology, and finance. Scientists,
+engineers, and computer scientists need to write good, clear code, for speed, clarity,
+flexibility, and ease of re-use.
                                 </p>
                             </div>
                         </a>
