--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -132,7 +132,7 @@ Academic writing is very useful while preparing any types of  books, and materia
 The core of scientific computing is designing, writing, testing, debugging and modifying numerical software for application to a vast range of areas: from graphics,
 weather forecasting, and chemistry to engineering, biology, and finance. Scientists,
 engineers, and computer scientists need to write good, clear code, for speed, clarity,
-flexibility, and ease of re-use.
+flexibility, and ease of re-use. A research project has not contributed to science until its results have been reported in a paper, the observations in which are accompanied by complete recipes.
                                 </p>
                             </div>
                         </a>
