--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -72,6 +72,17 @@ presentation.
                             </div>
                         </a>
 
+                        <a href= "" target="_blank" class="timeline">
+                            <div class="timeline-icon"><i class="fa fa-book"></i></div>
+                            <div class="timeline-content">
+                                <h3 class="title"> Introduction to GitHub </h3>
+                                <p class="description">
+                                   The Jupyter Notebook is an open source web application that you can use to create and share documents that contain live code, equations, visualizations, and text. Jupyter Notebook is maintained by the people at Project Jupyter.
+                                    <br> <p style="color:blue;">References: https://jupyter.org/documentation</p>                                 
+                                </p>
+                            </div>
+                        </a>
+
 
 
                         <a href= "" target="_blank" class="timeline">
