--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -77,7 +77,7 @@ presentation.
                             <div class="timeline-content">
                                 <h3 class="title"> Introduction to GitHub </h3>
                                 <p class="description">
-                                   GitHub, is a United States-based global company that provides hosting for software development version control using Git. In 2018, it became a subsidiary of Microsoft for US$7.5 billion. It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, and wikis for every project. In this topic we will discuss about use of GitHub in different operating system, use of Sublime text, etc.
+                                   GitHub, is a United States-based global company that provides hosting for software development version control using Git. In 2018, it became a subsidiary of Microsoft for US$7.5 billion. It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, and wikis for every project. In this topic we will discuss about use of GitHub and Sublime text, in different operating system, etc.
                                     <br> <p style="color:blue;">References: https://en.wikipedia.org/wiki/GitHub, https://github.com/</p>                                 
                                 </p>
                             </div>
