--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -67,10 +67,16 @@ modern technical and scientific documents such as article, proposal,
 report, thesis,term paper, project work, book, and beamer
 presentation. 
 <br>  <p style="color:blue;">In this topic we will discuss about how to make chapter, section, subsubsection, table, how to write equation, and how to insert figure in your LaTeX documents. 
-</p> </p>
-       
+
+<br> <p style="color:blue;">References:
+                                     <ul>
+  <li>Lamport, L. (1994). LATEX: a document preparation system: user's guide and reference manual. Addison-wesley.</li>
+  <li>https://latex.org/forum/(2020)</li>
+ </ul>                                   
+                                </p>
                             </div>
                         </a>
+
 
                         <a href= "" target="_blank" class="timeline">
                             <div class="timeline-icon"><i class="fa fa-book"></i></div>
