--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -71,7 +71,7 @@ presentation.
 <br> <p style="color:blue;">References:
                                      <ul>
   <li>Lamport, L. (1994). LATEX: a document preparation system: user's guide and reference manual. Addison-wesley.</li>
-  <li>https://latex.org/forum/(2020)</li>
+  <li>https://latex.org/forum/(2020).</li>
  </ul>                                   
                                 </p>
                             </div>
@@ -86,7 +86,7 @@ presentation.
                                    GitHub, is a United States-based global company that provides hosting for software development version control using Git. In 2018, it became a subsidiary of Microsoft for US$7.5 billion. It offers the distributed version control and source code management (SCM) functionality of Git, plus its own features. It provides access control and several collaboration features such as bug tracking, feature requests, task management, and wikis for every project. In this topic we will discuss about use of GitHub and Sublime text in different operating system, etc.
                                     <br> <p style="color:blue;">References:
                                      <ul>
-  <li>https://en.wikipedia.org/wiki/GitHub</li>
+  <li>Thung, F., Bissyande, T. F., Lo, D., & Jiang, L. (2013, March). Network structure of social coding in github. In 2013 17th European conference on software maintenance and reengineering (pp. 323-326). IEEE.</li>
   <li>https://github.com/</li>
  </ul>                                   
                                 </p>
