--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -127,9 +127,16 @@ are structured using itemize and enumerate environments, and so on. The obvious 
 approach is that you have to know LaTeX in order to use beamer. The advantage is that if you know LaTeX,
 you can use your knowledge of LaTeX also when creating a presentation, not only when writing papers.
 
+ <br> <p style="color:blue;">References:
+                                     <ul>
+  <li>Tantau, T. (2004). User’s Guide to the Beamer Class, Version 3.01.</li>
+  <li>https://github.com/josephwright/beamer(2020).</li>
+ </ul>                                   
                                 </p>
                             </div>
                         </a>
+
+
 
 
 
