--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -169,7 +169,7 @@ flexibility, and ease of re-use. A research project has not contributed to scien
                                      <ul>
   <li>Katz, M. J. (2009). From research to manuscript: A guide to scientific writing. Springer Science & Business Media.</li>
   </ul>     
-                             
+       <center> <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                                 </p>
                             </div>
                         </a>
