--- a/training/documentation/index.html
+++ b/training/documentation/index.html
@@ -168,15 +168,18 @@ flexibility, and ease of re-use. A research project has not contributed to scien
  <br> <p style="color:blue;">References:
                                      <ul>
   <li>Katz, M. J. (2009). From research to manuscript: A guide to scientific writing. Springer Science & Business Media.</li>
-  </ul>                                   
+  </ul>     
+  </li>
                                 </p>
+                                <center> <a href="https://www.teachme.codes/docs" target="_blank"> <span class="fa fa-book" style="color:navy"></span> Read More </a>  <a href="https://github.com/npshub" target="_blank"> <span class="fa fa-github" style="color:green"></span> Project Repo </a> </center>
                             </div>
-                        </a>
+                        </div>
+
 
                                
 
 
-
+s
                     </div>
                 </div>
             </div>
